--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Telegram
-TELEGRAM_BOT_TOKEN=123456:ABC-Your-Bot-Token
+TELEGRAM_BOT_TOKEN=8253590042:AAG6dQg2-5caZV5lmwBKKE1BbH84qGhfTyQ
 
 # Gamdl CLI
 COOKIES_PATH=./cookies.txt
@@ -16,8 +16,8 @@ FORCE_SUB_CHANNEL=@your_channel
 FORCE_SUB_JOIN_URL=
 
 # Access control
-PUBLIC_MODE=true
-ADMIN_USER_IDS=123456789
+PUBLIC_MODE=false
+ADMIN_USER_IDS=1256695927
 ALLOWED_USER_IDS=
 
 # Cleanup
@@ -27,7 +27,7 @@ TEMP_DIR_PREFIX=gamdl_
 
 # DB (optional, SQLite)
 # Either use DATABASE_URL=sqlite:///./bot.db or BOT_DB_PATH=./bot.db
-# DATABASE_URL=sqlite:///./bot.db
+# DATABASE_URL=
 # BOT_DB_PATH=./bot.db
 
 # Single-instance lock
